Fix project + abtMe alignments

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ body {
     background-color: #020234;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 a, p, h1, h2 {
     /*color: #ccffff;*/
     color: #bfd7ea;
@@ -73,7 +77,7 @@ a, p, h1, h2 {
     margin-top: 20%;
     display:flex;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
 }
 
 #name {
@@ -92,7 +96,7 @@ a, p, h1, h2 {
     margin-left: auto;
     margin-right: auto; 
     margin-top: 30%;
-    width: 50%;
+    width: 60%;
     margin-bottom: 30%; /* TEMPORARY FOR VISIBILITY */
 }
 
@@ -101,19 +105,19 @@ a, p, h1, h2 {
 }
 
 #mePar {
-    float: left;
-    width: 75%;
+    display: flex;
 }
 
-#meImg {
-    float: right;
+#meText {
+    flex: 1;
+    margin-right: 1.5em;
 }
 
 #experience {
     margin-left: auto;
     margin-right: auto; 
     margin-top: 30%;
-    width: 50%;
+    width: 60%;
     margin-bottom: 30%; /* TEMPORARY FOR VISIBILITY */
 }
 
@@ -121,27 +125,23 @@ a, p, h1, h2 {
     margin-left: auto;
     margin-right: auto; 
     margin-top: 30%;
-    width: 50%;
+    width: 60%;
     margin-bottom: 30%; /* TEMPORARY FOR VISIBILITY */
 }
 
-.rightImg {
-    float: right;
-    margin-left: 30%;
+.projectSec {
+    display: flex;
+    align-items: center;
 }
 
-.leftImg {
-    float: left;
+.projTextRight {
+    flex: 1;
+    margin-left: 1.5em;
 }
 
-.leftText {
-    float: left;
-    width: 50%;
-}
-
-.rightText {
-    float: right;
-    width: 50%;
+.projTextLeft {
+    flex: 1;
+    margin-right: 1.5em;
 }
 
 #sideBar {
